[Create] View staff  attendance list